--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel='stylesheet' type='text/css' href='css/style_common.css' />
     <link rel='stylesheet' type='text/css' href='css/style1.css' />
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <script data-main='js/main' src='js/libs/require.js'></script>
+    <script data-main='js/main' src='js/libs/require-2.0.4.js'></script>
   </head>
 
   <body>
