--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <title>Velocity Trendz</title>
 
-    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.min.css' />
-    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap-responsive.min.css' />
+    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.css' />
+    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap-responsive.css' />
     <link rel='stylesheet' type='text/css' media='screen' href='css/default.css' />
     <link rel='stylesheet' type='text/css' href='css/style_common.css' />
-    <link rel='stylesheet' type='text/css' href='css/style1.css' />
+    <link rel='stylesheet' type='text/css' href='css/style.css' />
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script data-main='js/main' src='js/libs/require-2.0.4.js'></script>
   </head>
