moved aboutus page into separate view/template made cloud zoom work on product page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.css' />
     <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap-responsive.css' />
+    <link rel='stylesheet' type='text/css' media='screen' href='css/cloud-zoom.css' />
     <link rel='stylesheet' type='text/css' media='screen' href='css/default.css' />
     <link rel='stylesheet' type='text/css' href='css/style_common.css' />
     <link rel='stylesheet' type='text/css' href='css/style.css' />
@@ -22,16 +23,5 @@
 
     <div class='push'></div>
     <div id='footer'></div>
-
-    <div id='modal-contact' class='modal fade'></div>
-
-    <div class='modal fade' id='modal-about'>
-      <div class="span5 block-title"><hr /><h1>About<a class='close' data-dismiss='modal'>×</a></h1><hr /></div>
-      <div class="span5">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur..</p>
-      </div>
-    </div>
-
   </body>
 </html>
