added theme-style.css for footer styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Velocity Trendz</title>
 
     <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.css' />
-    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap-responsive.css' />
     <link rel='stylesheet' type='text/css' media='screen' href='css/cloud-zoom.css' />
     <link rel='stylesheet' type='text/css' media='screen' href='css/default.css' />
     <link rel='stylesheet' type='text/css' href='css/style_common.css' />
     <link rel='stylesheet' type='text/css' href='css/style.css' />
+    <link rel='stylesheet' type='text/css' href='css/theme-style.css' />
+    <link rel='stylesheet' href='css/camera.css' type='text/css' media='all'>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script data-main='js/main' src='js/libs/require-2.0.4.js'></script>
   </head>
@@ -22,6 +23,6 @@
     <div id='content'></div>
 
     <div class='push'></div>
-    <div id='footer'></div>
+    <footer class='footer'></footer>
   </body>
 </html>
