loading js at end of body

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <link rel='stylesheet' type='text/css' href='css/style_common.css' />
     <link rel='stylesheet' type='text/css' href='css/style.css' />
     <link rel='stylesheet' type='text/css' href='css/theme-style.css' />
-    <link rel='stylesheet' href='css/camera.css' type='text/css' media='all'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <script data-main='js/main' src='js/libs/require-2.0.4.js'></script>
+    <!--<link rel='stylesheet' href='css/camera.css' type='text/css' media='all'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>-->
   </head>
 
   <body>
@@ -24,5 +23,6 @@
 
     <div class='push'></div>
     <footer class='footer'></footer>
+    <script data-main='js/main' src='js/libs/require-2.0.4.js'></script>
   </body>
 </html>
